Name:            juggernaut
Version:         0.0
Description:     makefile generator for dependencies up or down stream.
License:         BSD3
License-file:    LICENSE
Author:          Mark Hibberd
Maintainer:      mark@hibberd.id.au
Build-Type:      Simple
Cabal-Version:   >=1.2

Library
  Hs-Source-Dirs:  src tests
  Exposed-Modules: Juggernaut.Api
                   Juggernaut.Dependency
  GHC-Options:     -Wall
  Build-Depends:   base
                   

